Update tests and fix version.